modules/aws_security_group/main.tf
resource "aws_security_group" "application_security_group" {
  name_prefix = "application_security_group"
  vpc_id      = var.vpc_ID
 

 ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    security_groups=[aws_security_group.load_balancer_security_group.id]  
  }


  
ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.CIDR_Block
  }
 
  
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }
 
  tags = {
    Name = "application_security_group"
  }
}

 
  resource "aws_security_group" "database_security_group" {
  name_prefix = "database_security_group"
  vpc_id      = var.vpc_ID
  ingress {
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.application_security_group.id]
  }
  tags = {
    Name = "database_security_group"
  }

}


resource "aws_security_group" "load_balancer_security_group" {
  name_prefix = "load_balancer_security_group"
  vpc_id      = var.vpc_ID

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "load_balancer_security_group"
  }

}
